--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-langchain_community
 streamlit
-google-generativeai
-python-dotenv
-langchain
-PyPDF2
-faiss-cpu
-langchain_google_genai
+os
+requests
